--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ click = "^8.1.3"
 google-cloud-compute = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
+isort = "^5.10.1"
+pytest = "^7.1.2"
 
 [tool.poetry.scripts]
 benchmark = "gpu_reliability.cli:benchmark"
