--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ license = "MIT"
 python = "^3.10"
 click = "^8.1.3"
 google-cloud-compute = "^1.5.0"
+boto3 = "^1.24.53"
 
 [tool.poetry.dev-dependencies]
 isort = "^5.10.1"
